opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/base_bigstring"
bug-reports: "https://github.com/janestreet/base_bigstring/issues"
dev-repo: "git+https://github.com/janestreet/base_bigstring.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/base_bigstring/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "int_repr"
  "ppx_jane"
  "sexplib"
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "String type based on [Bigarray], for use in I/O and C-bindings"
description: "
String type based on [Bigarray], for use in I/O and C-bindings.
"
