(library
 (foreign_stubs
   (language c)
   (names base_bigstring_stubs)
   )
 (c_library_flags (:include flags.sexp))
 (name base_bigstring)
 (public_name base_bigstring)
 (js_of_ocaml
   (javascript_files runtime.js))
 (libraries base int_repr sexplib)
 (ocamlopt_flags :standard -O3)
 (preprocess
   (pps ppx_jane))
 )

(rule
  (targets flags.sexp)
  (deps (:discover config/discover.exe))
  (action (run %{discover})))
