(library
 (foreign_stubs
  (language c)
  (names base_bigstring_stubs))
 (name base_bigstring)
 (public_name base_bigstring)
 (js_of_ocaml
  (javascript_files runtime.js))
 (libraries base int_repr sexplib)
 (ocamlopt_flags :standard -O3)
 (preprocess
  (pps ppx_jane))
 (wasm_of_ocaml
  (javascript_files runtime.js)
  (wasm_files runtime.wat)))
